<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="1"
    android:gravity="center_horizontal" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorization"
        android:id="@+id/autorize"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:layout_marginTop="120dp"
        android:textColor="#ff3a3a3a" />

    <ImageView
        android:layout_width="123dp"
        android:layout_height="15dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/x_logo"
        android:layout_marginTop="45dp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:id ="@+id/name"
        android:layout_marginTop="45dp"
        android:layout_gravity="center_horizontal"
        android:autoText="false"
        android:gravity="center"
        android:background="@drawable/frame"
        android:hint="@string/hint_login"
        android:textColor="#ff3a3a3a" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pass"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:background="@drawable/frame"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_pass"
        android:textColor="#ff3a3a3a" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="10dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/login_menu"
                android:id ="@+id/login"
                android:background="@drawable/buttons"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_menu"
                android:id="@+id/enter"
                android:layout_gravity="center"
                android:textColor="@android:color/background_light"
                android:textSize="12dp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="35dp"
            android:layout_marginLeft="10dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/reg_menu"
                android:id="@+id/registration"
                android:background="@drawable/buttons"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_menu"
                android:id="@+id/toreg"
                android:layout_gravity="center"
                android:textColor="@android:color/background_light"
                android:textSize="12dp" />
        </FrameLayout>

    </LinearLayout>

</LinearLayout>
