<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#0000ffff"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:id="@+id/imageView6"
            android:background="@drawable/calendar_header" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:id="@+id/textView12"
            android:textSize="20dp"
            android:textColor="@android:color/background_light"
            android:gravity="center_horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="17dp" />
    </FrameLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:layout_column="0"
            android:layout_weight="1"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/timer"
            android:id="@+id/textView8"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="#343434"
            android:singleLine="false" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth"
            android:id="@+id/textView9"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="#343434" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sound"
            android:id="@+id/textView10"
            android:layout_column="3"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="#343434" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/work"
            android:id="@+id/textView3"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="#343434" />

        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/workWiFi"
            android:checked="false"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/workBT"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="false" />

        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/workSound"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="false" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/relax"
            android:id="@+id/textView4"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="#343434" />

        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relaxWiFi"
            android:checked="false"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relaxBT"
            android:checked="false"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relaxSound"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="false" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lunch"
            android:id="@+id/textView5"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="#343434" />

        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lunchWiFi"
            android:checked="false"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lunchBT"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="false" />

        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lunchSound"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="false" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/study"
            android:id="@+id/textView6"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="#343434" />

        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/studyWiFi"
            android:checked="false"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/studyBT"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="false" />

        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/studySound"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="false" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/meeting"
            android:id="@+id/textView7"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="#343434" />

        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/meetingWiFi"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="false" />

        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/meetingBT"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="false" />

        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/meetingSound"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="false" />
    </TableRow>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="57dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_width="228dp"
                android:layout_height="39dp"
                android:text="@string/apply"
                android:id="@+id/apply"
                android:layout_gravity="center"
                android:background="@drawable/reg_sprite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply"
                android:id="@+id/textView13"
                android:layout_gravity="center"
                android:textColor="@android:color/background_light"
                android:textIsSelectable="false"
                android:textSize="12dp" />
        </FrameLayout>

    </LinearLayout>

</TableLayout>